--- a/styles.css
+++ b/styles.css
@@ -39,17 +39,30 @@ body {
     margin-right: auto;
     margin-top: 13%;
     height: auto;
-    width: 23vw;
+    width: 22vw;
 }
 
   .hello {
       font-size: 50px;
   }
 
+  ul > li {
+    display: inline-block;
+    list-style: none;
+    position: relative;
+    z-index: 1;
+    padding: 0 4px 0 4px;
+  }
+
+  ul > li > a > img:hover {
+    transform: scale(1.2);
+  }
+
   .socials {
       display: flex;
       flex-direction: row;
       justify-content: center;
+      vertical-align: center;
       align-items: center;
       margin-bottom: 10px;
   }
@@ -57,31 +70,21 @@ body {
   .paper {
       width: 35px;
       height: auto;
-      padding: 0px 10px;
   }
 
   .email {
-      width: 40px;
+      width: 35px;
       height: auto;
-      padding: 0px 10px;
-  }
-
-  .linked-in {
-      width: 40px;
-      height: auto;
-      padding: 0px 10px;
   }
 
   .ln-logo {
     width: 35px;
     height: auto;
-    padding: 0px 10px;
   }
 
   .github {
       width: 35px;
       height: auto;
-      padding: 0px 10px;
   }
 
   .body-text {
@@ -113,8 +116,8 @@ body {
     background-position: 50% 50%;
     background-size: 0% 0%; */
     
-    padding-top: 25px;
-    padding-bottom: 5px;
+    padding-top: 20px;
+    padding-bottom: 0px;
     z-index: -1;
   }
 
